# pipecat-context-hub

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  SECURITY.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  retrieval-quality.yml
.github/workflows/: ci.yml
config/clients/: claude-code.json  vscode.json  zed.json
docs/: CONTRIBUTING.md  README.md
docs/dev_plans/: 20260218-design-pipecat-context-hub.md  20260228-multi-concept-search.md  20260325-chore-mcp-server-audit-hardening.md  20260330-feature-tree-sitter-ts-phase2.md  20260331-feature-version-aware-indexing.md  20260420-feature-reranker-model-selection.md  20260421-bug-serve-orphan-watchdog.md  20260422-feature-examples-topic-layout.md  README.md
docs/security/: threat-model.md
docs/setup/: README.md  claude-code.md  cursor.md  vscode.md  zed.md
scripts/: check_pipecat_drift.py
src/pipecat_context_hub/: __main__.py  cli.py
tests/: conftest.py
tests/benchmarks/: test_latency.py  test_retrieval_quality.py
tests/integration/: conftest.py  test_end_to_end.py  test_serve_lifetime.py
tests/smoke/: README.md  __init__.py  conftest.py  invariants.py  refresh_fixtures.py  test_pipecat_layout.py
tests/unit/: test_ast_extractor.py  test_cli.py  test_config.py  test_deprecation_map.py  test_docs_crawler.py  test_github_ingest.py  test_github_ingest_taxonomy.py  test_hub_status.py  test_index_store.py  test_mcp_tools.py  test_release_notes_deprecation.py  test_retrieval.py  test_rst_type_parser.py  test_server.py  test_shared_types.py  test_source_ingest.py  test_taxonomy.py  test_transport.py  test_ts_source_parser.py  test_version_extraction.py  test_version_pinned_indexing.py  test_version_scoring.py
(+65 files in other folders)
