[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipecat-context-hub"
version = "0.0.17"
description = "Local-first MCP server providing fresh Pipecat docs/examples context for Claude Code, Cursor, VS Code, and Zed."
readme = "docs/README.md"
license = "BSD-2-Clause"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "mcp>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "chromadb>=0.6,<1.0",
    "sentence-transformers>=4.0,<6.0",
    "gitpython>=3.1,<4.0",
    "click>=8.0,<9.0",
    "tree-sitter>=0.25,<1.0",
    "tree-sitter-typescript>=0.23,<1.0",
    "packaging>=21.0,<27.0",
    "cryptography>=46.0.7",
    "transformers>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.0,<2.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
pipecat-context-hub = "pipecat_context_hub.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pipecat_context_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["benchmark: latency and retrieval-quality benchmarks (deselect with -m 'not benchmark')"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_return_any = false

[dependency-groups]
dev = [
    "umap-learn>=0.5.11",
    "bandit>=1.8,<2.0",
    "cyclonedx-bom>=7.3,<8.0",
    "pip-audit>=2.8,<3.0",
    "lxml>=6.1.0",
]
